Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18540

lnetctl ping --timeout is broken unless source nid is specified

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      cassini-hosta:~ # lnetctl ping --timeout 10 172.18.2.7@tcp1
      timeout 10000
      time 10000
      ---
      manage:
      -     ping:
            errno: -22
            descr: ! "Invalid input data or parameter"
      ...
      cassini-hosta:~ #
      

      bug in "5ddc054540 LU-17629 utils: support hostname with lustre_lnet_parse_nid_range()" where "source" key is put into the yaml without a value so ping fails with EINVAL.

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: